merge of v15 changes to onap
Issue-ID: AAI-2088
Change-Id: I588499af58d0e799d860b2b4362da7c48050fafd
Signed-off-by: LaMont, William (wl2432) <wl2432@us.att.com>
Signed-off-by: Kajur, Harish (vk250x) <vk250x@att.com>